--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,40 +1,152 @@
 // menu button
 .menu-btn {
-    position: absolute;
-    z-index: 3;
-    right: 35px;
-    top: 35px;
-    cursor: easeOut;
+  position: absolute;
+  z-index: 3;
+  right: 35px;
+  top: 35px;
+  cursor: easeOut;
+  @include easeOut;
+
+  .btn-line {
+    width: 28px;
+    height: 3px;
+    margin: 0 0 5px 0;
+    background: #fff;
     @include easeOut;
+  }
+
+  // rotate into X with menuLines
+  &.close {
+    transform: rotate(180deg);
 
     .btn-line {
-        width: 28px;
-        height: 3px;
-        margin: 0 0 5px 0;
-        background: #fff;
-        @include easeOut;
+      // line 1 - rotate
+      &:nth-child(1) {
+        transform: rotate(45deg) translate(5px, 5px);
+      }
+
+      // line 2 - hide
+      &:nth-child(2) {
+        opacity: 0;
+      }
+
+      // line 3 - rotate
+      &:nth-child(3) {
+        transform: rotate(-45deg) translate(7px, -6px);
+      }
+    }
+  }
+}
+
+// menu overlay
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0.9;
+  visibility: hidden;
+
+  &.show {
+    visibility: visible;
+  }
+
+  &-branding,
+  &-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  &-nav {
+    margin: 0;
+    padding: 0;
+    background: darken($primary-color, 5);
+    list-style: none;
+    transform: translate3d(0, -100%, 0);
+    @include easeOut;
+
+    &.show {
+      // slide in from top
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  // branding side
+  &-branding {
+    background: $primary-color;
+    transform: translate3d(0, 100%, 0);
+
+    @include easeOut;
+
+    &.show {
+      // slide in from top
+      transform: translate3d(0, 0, 0);
+      opacity: 1;
     }
 
-    // rotate into X with menuLines
-    &.close {
-        transform: rotate(180deg);
+    .portrait {
+      width: 250px;
+      height: 250px;
+      background: url(../img/my-img.jpg);
+      border-radius: 50%;
+      border: solid 3px $secondary-color;
+    }
 
-        .btn-line {
+    .coding-icons {
+        margin-top: 1rem;
+        justify-content: center;
+        text-align: center;
 
-            // line 1 - rotate
-            &:nth-child(1) {
-                transform: rotate(45deg) translate(5px, 5px)
+        a {
+            padding: 0.4rem;
+
+            &:hover {
+                color: $secondary-color;
+                @include easeOut;
             }
-            
-            // line 2 - hide
-            &:nth-child(2) {
-                opacity: 0;
-            }
-            
-            // line 3 - rotate
-                &:nth-child(3) {
-                    transform: rotate(-45deg) translate(7px, -6px)
-                }
         }
+        
     }
+  }
+
+  .nav-item {
+    transform: translate3d(600px, 0, 0);
+    @include easeOut;
+
+    &.show {
+      // slide in from right
+      transform: translate3d(0, 0, 0);
+    }
+
+    &.current > a {
+      color: $secondary-color;
+    }
+  }
+
+  .nav-link {
+    display: inline-block;
+    position: relative;
+    font-size: 30px;
+    text-transform: uppercase;
+    padding: 1rem 0;
+    color: #fff;
+    text-decoration: none;
+    @include easeOut;
+
+    &:hover {
+      color: $secondary-color;
+    }
+  }
+}
+
+// display each nav-item by 0.1s
+@for $x from 1 through 4 {
+  .nav-item:nth-child(#{$x}) {
+    transition-delay: $x * 0.1s;
+  }
 }
