--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,7 +31,8 @@ h3 {
   &.sm-heading {
     margin-bottom: 2rem;
     padding: 0.2rem 1 rem;
-    background: rgba(lighten($primary-color, 2), 0.5);
+    background: rgba(lighten($primary-color, 2), 0);
+    z-index: 2;
   }
 }
 
