--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -29,8 +29,17 @@ $background-opacity: 0.6;
     }
 }
 
+// set textColor
+@function set-text-color($color) {
+    @if (lightness($color) > 40) {
+        @return #000;
+    } @else {
+        @return #fff
+    }
+} 
 
-// media query mixins
+
+// media query mixin
 @mixin mediaSm {
     @media screen and (max-width: 500px) {
         @content;
