--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,7 +11,7 @@
 body {
   @include background;
   background-color: $primary-color;
-  color: #fff;
+  color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
   font-family: Helvetica;
@@ -38,7 +38,7 @@ h3 {
 }
 
 a {
-  color: #fff;
+  color: set-text-color($primary-color);  
   text-decoration: none;
 }
 
