--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,10 +1,19 @@
 // wideScreens
 
-@include mediaXL {}
+@include mediaXL {
+
+    .projects{
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+}
 
 // desktops & laptops (larger)
 
-@include mediaLg {}
+@include mediaLg {
+        grid-template-columns: repeat(3, 1fr);
+
+}
 
 // tables & small laptops 
 
@@ -57,6 +66,11 @@
 
         grid-template-columns: 1fr;
     }
+
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
+
+    }
 }
 
 // wideScreens
@@ -64,5 +78,10 @@
 @include mediaSm {
     main#home h1 {
         margin-top: 10vh;
+    }
+
+    .projects {
+        grid-template-columns: 1fr;
+
     }
 }
